[gd_scene load_steps=2 format=3 uid="uid://d1gok7hql0aiu"]

[ext_resource type="Script" uid="uid://b7y6410y14ey6" path="res://Main.gd" id="1_1"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.6, 0.7, 0.9, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="FaithLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Faith: 1000"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "HEAVENLY MIRACLE HOTLINE"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ReputationLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Reputation: 2.5/5.0"

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Level: 1 (Intern)"

[node name="MainContent" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="UpgradesPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/MainContent"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent/UpgradesPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MainContent/UpgradesPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Upgrades"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/MainContent/UpgradesPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent/UpgradesPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="CenterPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/MainContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterImage" type="ColorRect" parent="MarginContainer/VBoxContainer/MainContent/CenterPanel"]
layout_mode = 2
color = Color(0.4, 0.6, 0.9, 1)

[node name="PlaceholderLabel" type="Label" parent="MarginContainer/VBoxContainer/MainContent/CenterPanel/CenterImage"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "☁️
HEAVENLY
HOTLINE
☁️"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MissionsPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/MainContent"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent/MissionsPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MainContent/MissionsPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Missions"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/MainContent/MissionsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent/MissionsPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="MessageLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = ""
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="AutoPlayButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsBar"]
layout_mode = 2
toggle_mode = true
text = "Auto Play: OFF"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/ButtonsBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HelpButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsBar"]
layout_mode = 2
text = "How to Play"

[node name="GodsPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GodsPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GodsPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Available Gods"
horizontal_alignment = 1

[node name="SortButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GodsPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="SortByStrength" type="Button" parent="MarginContainer/VBoxContainer/GodsPanel/VBoxContainer/SortButtons"]
layout_mode = 2
text = "Sort by STR"

[node name="SortBySpeed" type="Button" parent="MarginContainer/VBoxContainer/GodsPanel/VBoxContainer/SortButtons"]
layout_mode = 2
text = "Sort by SPD"

[node name="SortByIntelligence" type="Button" parent="MarginContainer/VBoxContainer/GodsPanel/VBoxContainer/SortButtons"]
layout_mode = 2
text = "Sort by INT"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/GodsPanel/VBoxContainer/SortButtons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FireGodButton" type="Button" parent="MarginContainer/VBoxContainer/GodsPanel/VBoxContainer/SortButtons"]
layout_mode = 2
text = "Fire Selected God (1000 Faith)"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/GodsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 2
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GodsPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
